Fixed layout problems with IE

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -210,25 +210,26 @@ canvas#drawable-canvas {
     .notification-area {
       float: left;
       text-align: center;
-      width: 640px;
+      width: 656px;
     }
     .status-area {
       float: right;
       text-align: right;
-      width: 384px;
+      width: 368px;
 
       .cash, #time{
-        display: inline-block;
         font-weight: bold;
         margin: 0px;
         padding: 0px;
       }
 
       .cash {
+        float: left;
         margin-right: 30px;
       }
 
       #time {
+        float: right;
         margin-right: 16px;
       }
     }
